WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
243242
[LFC][IFC] Incorrect empty content handling
https://bugs.webkit.org/show_bug.cgi?id=243242
Summary
[LFC][IFC] Incorrect empty content handling
alan
Reported
2022-07-26 20:29:29 PDT
empty before content should generate a zero width/height line box. div:before { content: ""; display: block; background: red; }
Attachments
Patch
(10.09 KB, patch)
2022-07-26 20:35 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(9.13 KB, patch)
2022-07-26 21:20 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(9.21 KB, patch)
2022-07-27 09:04 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2022-07-26 20:35:20 PDT
Created
attachment 461236
[details]
Patch
alan
Comment 2
2022-07-26 21:20:03 PDT
Created
attachment 461237
[details]
Patch
alan
Comment 3
2022-07-27 09:04:33 PDT
Created
attachment 461248
[details]
Patch
EWS
Comment 4
2022-07-27 11:35:59 PDT
Committed
252872@main
(e59fe453982b): <
https://commits.webkit.org/252872@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 461248
[details]
.
Radar WebKit Bug Importer
Comment 5
2022-07-27 11:36:18 PDT
<
rdar://problem/97675944
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug