[LFC][IFC] Incorrect empty content handling https://bugs.webkit.org/show_bug.cgi?id=243242

Reviewed by Antti Koivisto.

Empty generated content (e.g. div:before { content: "" }) should create an empty line box.
This patch is in preparation for enabling text-fragment type of content for IFC.

* Source/WebCore/layout/formattingContexts/inline/InlineFormattingContext.cpp:
(WebCore::Layout::InlineFormattingContext::computeGeometryForLineContent):
* Source/WebCore/layout/formattingContexts/inline/InlineLine.h:
(WebCore::Layout::Line::Run::isInlineBox const):
(WebCore::Layout::Line::Run::isContentful const): Make sure that empty InlineTextItem (see InlineTextItem::createEmptyItem) is not considered contentful.
(WebCore::Layout::Line::hasContent const):
* Source/WebCore/layout/formattingContexts/inline/InlineLineBoxBuilder.cpp:
(WebCore::Layout::LineBoxBuilder::constructInlineLevelBoxes):
* Source/WebCore/layout/formattingContexts/inline/display/InlineDisplayContentBuilder.cpp:
(WebCore::Layout::InlineDisplayContentBuilder::processNonBidiContent):
* Source/WebCore/layout/formattingContexts/inline/display/InlineDisplayLine.h:
* Source/WebCore/layout/formattingContexts/inline/display/InlineDisplayLineBuilder.cpp:
(WebCore::Layout::InlineDisplayLineBuilder::build const):
* Source/WebCore/layout/formattingContexts/inline/display/InlineDisplayLineBuilder.h:

Canonical link: https://commits.webkit.org/252872@main